--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -13,6 +13,7 @@
             <div id="subtext">
                 Resource to prepare for any of your job interviews, using the help of the powerful GPT-3 Tool
             </div>
+            <div id = "imghomepage"><img src = "https://fjwp.s3.amazonaws.com/blog/wp-content/uploads/2019/11/29111558/prep-for-job-interview-1024x512.png"></div>
         </div>
         <div class="start">
             <button class="button" id="start">Start Prepping!</button>
