--- a/templates/topics.html
+++ b/templates/topics.html
@@ -11,7 +11,7 @@
         <div id = "listtitle">Here is a list of potential topics: </div>
         <div id="topic"></div>
         <div class="question2">
-            <div>Please type the topic that interests you the most and prepare to practice related questions and get feedback!: <input type="text" id="topicq2"> <button id="q2">Submit</button></div>
+            <div>Please type the topic that interests you the most and prepare to practice related questions and get feedback (please type out the topic name and not the number!): <input type="text" id="topicq2"> <button id="q2">Submit</button></div>
         </div>
         <div class = "load"></div>
     </body>
