--- a/templates/responsepage.html
+++ b/templates/responsepage.html
@@ -11,7 +11,7 @@
         <div id = "listtitle">Here is an example response to the question based on the keywords you gave: </div>
         <div id="resp"></div>
         <div class="question4">
-            <div>Are there any edits you would like to make? If so, type new keywords or phrases to include in the response: <input type="text" id="keywsq4"> <button id="q4">Submit</button></div>
+            <div>Are there any edits you would like to make? If so, type new keywords or phrases to include in the response. If not, type no: <input type="text" id="keywsq4"> <button id="q4">Submit</button></div>
         </div>
         <div class = "load"></div>
     </body>
