Adding the topic and position to go through page by page

--- a/templates/topics.html
+++ b/templates/topics.html
@@ -4,11 +4,12 @@
 
 <script>
     let topics = {{topics|tojson}}
+    let position = {{position|tojson}}
 </script>
 
 <script type="text/javascript" src="{{ url_for('static', filename = 'topics.js') }}"></script>
     <body>
-        <div id = "listtitle">Here is a list of potential topics: </div>
+        <div id = "listtitle"></div>
         <div id="topic"></div>
         <div class="question2">
             <div>Please type the topic that interests you the most and prepare to practice related questions and get feedback (please type out the topic name and not the number!): <input type="text" id="topicq2"> <button id="q2">Submit</button></div>
