--- a/templates/gptquestion.html
+++ b/templates/gptquestion.html
@@ -4,11 +4,13 @@
 
 <script>
     let question = {{question|tojson}}
+    let topic = {{topic|tojson}}
+    let position = {{position|tojson}}
 </script>
 
 <script type="text/javascript" src="{{ url_for('static', filename = 'gptquestion.js') }}"></script>
     <body>
-        <div id = "listtitle">Here is the most asked question related to topic: </div>
+        <div id = "listtitle"></div>
         <div id="quest"></div>
         <div class="question3">
             <div>Please type a few keywords you would like to have in the response to this question!: <input type="text" id="keywords"> <button id="q3">Submit</button></div>
