Changed my API key and edited gptquestion.html

--- a/templates/gptquestion.html
+++ b/templates/gptquestion.html
@@ -13,7 +13,7 @@
         <div id = "listtitle"></div>
         <div id="quest"></div>
         <div class="question3">
-            <div>Please type a few keywords you would like to have in the response to this question!: <input type="text" id="keywords"> <button id="q3">Submit</button></div>
+            <div>Please type a few keywords/phrases you would like to have in the response to this question. The more you input, the more personalized the response will be! <input type="text" id="keywords"> <button id="q3">Submit</button></div>
         </div>
         <div class = "load"></div>
     </body>
