--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -11,9 +11,9 @@
                 Interview Prepper!
             </div>
             <div id="subtext">
-                Resource to prepare for any of your job interviews, using the help of the powerful GPT-3 Tool
+                Best resource to prepare for any of your job interviews, using the help of the powerful GPT-3 Tool. Get ready to input some basic information about your upcoming interviews and let us do the rest!
             </div>
-            <div id = "imghomepage"><img src = "https://fjwp.s3.amazonaws.com/blog/wp-content/uploads/2019/11/29111558/prep-for-job-interview-1024x512.png"></div>
+            <div id = "imghomepage"><img src = "https://assets-global.website-files.com/61a05ff14c09ecacc06eec05/61f5a51786ca3a4b5fc5689e_How_to_Take_Good_Interview_Notes_Blog-Header-01.png" width="800" height="450"></div>
         </div>
         <div class="start">
             <button class="button" id="start">Start Prepping!</button>
