--- a/static/main.css
+++ b/static/main.css
@@ -9,7 +9,12 @@
     text-align: center;
     font-size: medium;
 }
-
+#imghomepage{
+  display: block;
+margin-left: auto;
+margin-right: auto;
+width: 60%;
+}
 body {
     background-image: linear-gradient(rgb(112,112,112),rgb(212,212,212));
     min-height: 850px;
